@@ -1,39 +1,43 @@
 dnl
-dnl IRDA_HOOK (script-if-irda-found, failflag)
+dnl Option to enable or disable IrDA support
 dnl
-dnl if failflag is "failure" it aborts if obex is not found.
+dnl this is stupid and won't work at all.
 dnl
 
-AC_DEFUN([IRDA_HOOK],[
-        AC_CACHE_CHECK([for IrDA support],am_cv_irda_found,[
+AC_DEFUN([IRDA_CHECK],[
+AC_ARG_ENABLE([irda],
+              [AS_HELP_STRING([--disable-irda],
+                              [Disables openftp irda support @<:@default=auto@:>@])],
+              [ac_irda_enabled=$enableval], [ac_irda_enabled=yes])
 
-                AC_TRY_COMPILE([#include <sys/socket.h>
-                                #include <linux/irda.h>], dnl not nice
-                [struct irda_device_list l;],
-                am_cv_irda_found=yes,
-                am_cv_irda_found=no)])
-
-                if test $am_cv_irda_found = yes; then
-                        AC_DEFINE(HAVE_IRDA,1,[Define if system supports IrDA])
-
-                fi
-        ])
-
+if test "$ac_irda_enabled" = yes; then
+	AC_CACHE_CHECK([for IrDA support], am_cv_irda_found,[
+		AC_TRY_COMPILE([#include <sys/socket.h>
+				#include "src/irda.h"],
+				[struct irda_device_list l;],
+				am_cv_irda_found=yes,
+				am_cv_irda_found=no)])
+	if test $am_cv_irda_found = yes; then
+		AC_DEFINE([HAVE_IRDA], [1], [Define if system supports IrDA and it's enabled])
+	fi
+fi
 ])
 
-AC_DEFUN([IRDA_CHECK], [
-        IRDA_HOOK([],failure)
-])
-
 
 dnl
-dnl Check for Bluetooth library
+dnl Option to enable or disable Bluetooth support
 dnl
 
-AC_DEFUN([BLUETOOTH_CHECK],[
-	AC_MSG_CHECKING(for Bluetooth support)
+AC_DEFUN([BLUETOOTH_CHECK],[  
+AC_ARG_ENABLE([bluetooth],
+              [AS_HELP_STRING([--disable-bluetooth],
+                              [Disables openftp bluetooth support @<:@default=auto@:>@])],
+       	      [ac_bluetooth_enabled=$enableval], [ac_bluetooth_enabled=yes])
 
-	AC_TRY_COMPILE(	[
+if test "$ac_bluetooth_enabled" = yes; then
+	AC_CACHE_CHECK([for Bluetooth support], am_cv_bluetooth_found,[
+
+		AC_TRY_COMPILE([
 				#ifdef __FreeBSD__
 				#include <sys/types.h>
 				#include <bluetooth.h>
@@ -52,19 +56,15 @@ AC_DEFUN([BLUETOOTH_CHECK],[
 				#endif
 			],
 				am_cv_bluetooth_found=yes,
-				am_cv_bluetooth_found=no
-			)
-
+				am_cv_bluetooth_found=no)])
 	if test $am_cv_bluetooth_found = yes; then
-		AC_DEFINE(HAVE_BLUETOOTH,1,[Define if system supports Bluetooth])
-
+		AC_DEFINE([HAVE_BLUETOOTH], [1], [Define if system supports Bluetooth and it's enabled])
 		BLUETOOTH_CFLAGS=""
 		BLUETOOTH_LIBS="-lbluetooth"
 	fi
-
 	AC_SUBST(BLUETOOTH_CFLAGS)
 	AC_SUBST(BLUETOOTH_LIBS)
-	AC_MSG_RESULT($am_cv_bluetooth_found)
+fi
 ])
 
 
