@@ -1,6 +1,14 @@
+2005-09-15  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Quick iconv hack. Needs to be done in openobex.
+
 2005-09-14  Christian W. Zuckschwerdt  <zany@triq.net>
 
 	* Rewrote folder-listing parser to enhance compatibility
+
+2005-09-12  Christian W. Zuckschwerdt  <zany@triq.net>
+
+	* Connection headers by Philip Kovacs <kovacsp3@comcast.net>
 
 2005-08-06  Christian W. Zuckschwerdt  <zany@triq.net>
 
